Fixed overflow in vertical column header

--- a/nspdice_probability/static/style.css
+++ b/nspdice_probability/static/style.css
@@ -4,7 +4,7 @@ body {
 
 .top .choice {
   position: relative;
-  height: 100px;
+  height: 125px;
   width: 35px;
   min-width: 35px;
   max-width: 35px;
@@ -30,9 +30,9 @@ body {
 
   position: relative;
   height: 35px;
-  width: 100px;
+  width: 125px;
   left: 0px;
-  top: 100px;
+  top: 125px;
 }
 
 .top .choice .title .row {
